--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "botcore-devenv",
   "version": "1.0.0",
   "type": "module",
-  "scripts": {
-  },
+  "scripts": {},
   "engines": {
     "node": ">=18.10.0"
   },
@@ -11,5 +10,18 @@
   "keywords": [],
   "author": "HACKERPRO17",
   "license": "ISC",
-  "description": "Module development environment for BotCore"
+  "description": "Module development environment for BotCore",
+  "dependencies": {
+    "@tenorium/utilslib": "^1.0.11"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "dts-bundle": "^0.7.3",
+    "eslint": "^8.57.1",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.6.0",
+    "typescript": "^5.7.3"
+  }
 }
