--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "botcore-devenv",
   "version": "1.0.0",
   "type": "module",
-  "scripts": {},
+  "types": "./BotCore/build/tsc/botcore.d.ts",
+  "scripts": {
+    "build": "node scripts/build.js",
+    "buildAndStart": "node scripts/buildAndStart.js",
+    "clean": "node scripts/clean.js",
+    "copy": "node scripts/botcoreCopyModules.js",
+    "update": "node scripts/botcoreUpdate.js",
+    "start": "node scripts/start.js"
+  },
   "engines": {
     "node": ">=18.10.0"
   },
@@ -12,7 +20,10 @@
   "license": "ISC",
   "description": "Module development environment for BotCore",
   "dependencies": {
-    "@tenorium/utilslib": "^1.0.11"
+    "@tenorium/utilslib": "^1.0.12",
+    "@types/glob": "^8.1.0",
+    "ast-types": "^0.16.1",
+    "recast": "^0.23.11"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.4.0",
@@ -23,5 +34,22 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.6.0",
     "typescript": "^5.7.3"
+  },
+  "imports": {
+    "@core": [
+      "./BotCore/build/core/core.js"
+    ],
+    "@core/*": [
+      "./BotCore/build/core/*"
+    ],
+    "@init/*": [
+      "./BotCore/build/init/*"
+    ],
+    "@system-modules/*": [
+      "./BotCore/build/system-modules/*"
+    ],
+    "@util/*": [
+      "./BotCore/build/util/*"
+    ]
   }
 }
