--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "botcore-devenv",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "types": "./BotCore/build/tsc/botcore.d.ts",
   "scripts": {
-    "build": "node scripts/build.js",
-    "buildAndStart": "node scripts/buildAndStart.js",
-    "clean": "node scripts/clean.js",
-    "copy": "node scripts/botcoreCopyModules.js",
-    "update": "node scripts/botcoreUpdate.js",
+    "botcore:copy": "node scripts/botcore/copy.js",
+    "botcore:update": "node scripts/botcore/update.js",
+    "build": "node scripts/build/build.js",
+    "build:clean": "node scripts/build/clean.js",
+    "build:watch": "node scripts/build/watch.js",
+    "deploy": "node scripts/deploy.js",
     "start": "node scripts/start.js"
   },
   "engines": {
