--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
   "license": "ISC",
   "description": "Module development environment for BotCore",
   "dependencies": {
-    "@tenorium/utilslib": "^1.0.12",
+    "@tenorium/utilslib": "^1.0.14",
     "@types/glob": "^8.1.0",
-    "ast-types": "^0.16.1",
-    "recast": "^0.23.11"
+    "ast-types": "^0.16.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.4.0",
