--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "description": "Module development environment for BotCore",
   "dependencies": {
     "@tenorium/utilslib": "^1.0.14",
-    "@types/glob": "^8.1.0",
-    "ast-types": "^0.16.1"
+    "@types/glob": "^8.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.4.0",
